<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shaarlier</string>
    <string name="action_settings">Settings</string>
    <string name="add_error">An error occurred during sharing</string>
    <string name="add_not_handle">Unhandled content</string>
    <string name="add_success">Your link have been shared</string>
    <string name="default_private">New links are private by default</string>
    <string name="description_hint">Description</string>
    <string name="error_connecting">The given url does not seems to work</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_login">Wrong credentials</string>
    <string name="error_parsing_token">The given url is not a compatible Shaarli</string>
    <string name="error_url">The url is wrong</string>
    <string name="error_retrieving_tags">Could not load tags</string>
    <string name="logo_description">Shaarli logo</string>
    <string name="more">More to come…</string>
    <string name="private_share">Private</string>
    <string name="success_test">The settings are fine</string>
    <string name="tags_hint">tags (separated by spaces)</string>
    <string name="test_connection">Try and save</string>
    <string name="text_behaviour">Behaviour</string>
    <string name="text_show_share_dialog">Show dialog box when sharing</string>
    <string name="title_activity_add">Add to Shaarli</string>
    <string name="title_activity_share">Add to Shaarli</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="basic_auth">HTTP Basic Authentication</string>
    <string name="your_shaarli_url">Your Shaarli url :</string>

    <string name="params" translatable="false">com.dimtion.shaarliposter.parms</string>
    <string name="p_url_shaarli" translatable="false">com.dimtion.shaarliposter.p_url_shaarli</string>
    <string name="p_username" translatable="false">com.dimtion.shaarliposter.p_username</string>
    <string name="p_password" translatable="false">com.dimtion.shaarliposter.p_password</string>
    <string name="p_basic_username" translatable="false">com.dimtion.shaarliposter.p_basic_username</string>
    <string name="p_basic_password" translatable="false">com.dimtion.shaarliposter.p_basic_password</string>
    <string name="p_validated" translatable="false">com.dimtion.shaarliposter.p_validated</string>
    <string name="p_default_private" translatable="false">com.dimtion.shaarlier.p_default_private</string>
    <string name="p_show_share_dialog" translatable="false">com.dimtion.shaarlier.p_show_share_dialog</string>
    <string name="p_protocol" translatable="false">com.dimtion.shaarlier.p_protocol</string>
    <string name="p_user_url" translatable="false">com.dimtion.shaarlier.p_user_url</string>
    <string name="p_auto_title" translatable="false">com.dimtion.shaarlier.auto_title</string>
    <string name="p_auto_description" translatable="false">com.dimtion.shaarlier.auto_description</string>
    <string name="p_version" translatable="false">com.dimtion.shaarlier.p_version</string>
    <string name="p_default_account" translatable="false">com.dimtion.shaarlier.p_default_account</string>
    <string name="saved_tags" translatable="false">com.dimtion.shaarlier.saved_tags</string>

    <string name="share">Share a link</string>
    <string name="text_about">About</string>
    <string name="text_about_details">To use this app your need a <a href="https://github.com/shaarli/Shaarli">Shaarli</a> instance.
        Framasoft provides <a href="https://my.framasoft.org/">free managed instances</a>.
        \n\nThis app is proudly developed by dimtion, find me on my <a href="https://dimtion.fr">website</a>.</string>
    <string-array name="select_protocol" translatable="false">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string name="loading_title_hint">Loading title…</string>
    <string name="error_retrieving_title">Title could not be loaded</string>
    <string name="error_retrieving_description">Description could not be loaded</string>
    <string name="auto_load_title">Automatically load page title</string>
    <string name="username_hint" translatable="false">Batman</string>
    <string name="url_hint">https://shaarli.myserver.org</string>
    <string name="action_go_to_shaarli">Open my Shaarli</string>
    <string name="developer_shaarli" translatable="false">https://shaarli.dimtion.fr</string>
    <string name="developer_mail" translatable="false">zizou.xena@gmail.com</string>
    <string name="action_share">Share a link</string>
    <string name="text_version">Version unknown</string>
    <string name="hint_new_url">(empty for a new note)</string>
    <string name="text_new_url">Link to share:</string>
    <string name="text_url" translatable="false">Url:</string>
    <string name="text_url_hint">(leave empty for a new note)</string>
    <string name="title">Title:</string>
    <string name="title_hint">Title</string>
    <string name="text_description">Description:</string>
    <string name="title_activity_accounts_management">Accounts</string>

    <string name="text_add">Add</string>
    <string name="text_validate">Validate</string>
    <string name="text_no_account">There is no account to show</string>
    <string name="button_manage_accounts">Manage accounts</string>
    <string name="text_account_name">Account name</string>
    <string name="check_default_account">Default account</string>
    <string name="button_delete_account">Delete account</string>
    <string name="title_activity_add_account">New account</string>
    <string name="text_confirm_deletion_account">Are you sure you want to delete this account ?</string>
    <string name="dbKey" translatable="false">com.dimtion.shaarlier.database_key</string>
    <string name="check_disable_cert_validation">Disable certificate validation (unsecure)</string>
    <string name="error_unknown">An unknown error has occurred</string>
    <string name="add_account">Add account</string>
    <string name="send_report">You think this is a bug ?</string>
    <string name="report_issue">Would you like to report this issue ?</string>
    <string name="loading_description_hint">Loading description…</string>
    <string name="auto_load_description">Automatically load page description</string>
    <string name="handle_http_scheme">Show Shaarlier in the list of web browsers</string>
    <string name="version">"Version %1$s"</string>
    <string name="p_shaarli2twitter" translatable="false">com.dimtion.shaarlier.shaarli2twitter</string>
    <string name="p_shaarli2mastodon" translatable="false">com.dimtion.shaarlier.shaarli2mastodon</string>
    <string name="tweet">Tweet</string>
    <string name="toot">Toot</string>
    <string name="use_twitter">Use twitter (needs shaarli2twitter plugin)</string>
    <string name="use_mastodon">Use mastodon (needs shaarli2mastodon plugin)</string>
    <string name="advanced">Advanced</string>
    <string name="action_open_shaarli">Open Shaarli</string>
    <string name="is_not_new_link">editing</string>
    <string name="user_restAPIKey">Rest API Secret</string>

    <string name="notification_channel_error_name">Share error</string>
    <string name="notification_channel_error_description">Channel dedicated to sharing errors</string>
    <string name="use_username_password_deprecated">Use username/password (deprecated)</string>
    <string name="title_activity_link_list">LinkListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="menu_refresh">Refresh</string>
</resources>