<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Spinner
            android:id="@+id/chooseAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_url" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_new_url"
            android:importantForAutofill="no"
            android:inputType="textUri" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint=""
            android:importantForAutofill="no"
            android:inputType="textAutoCorrect|textEmailSubject" />

            <ProgressBar
                android:id="@+id/loading_title"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/title"
                android:layout_alignEnd="@+id/title"
                android:layout_alignRight="@+id/title"
                android:layout_alignTop="@+id/title"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:indeterminate="true"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_description" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint=""
            android:importantForAutofill="no"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="10"
            android:minLines="3"
            android:singleLine="false"
            android:textSize="15sp" />

            <ProgressBar
                android:id="@+id/loading_description"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/description"
                android:layout_alignRight="@+id/description"
                android:layout_alignTop="@+id/description"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:indeterminate="true"
                android:visibility="gone" />
        </RelativeLayout>

        <MultiAutoCompleteTextView
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tags_hint" />

        <CheckBox
            android:id="@+id/private_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/private_share" />

        <CheckBox
            android:id="@+id/tweet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tweet" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>